--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -1,29 +1,11 @@
-/* Django Admin Base CSS - Default styling */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+{% extends "admin/base_site.html" %}
+{% load static %}
 
+{% block extrastyle %}{{ block.super }}
+<!-- Session Manager -->
+<script src="{% static 'session-manager.js' %}"></script>
+<style>
 /* Ensure Django admin uses default styling */
-body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Roboto', 'Lucida Grande', 'DejaVu Sans', 'Bitstream Vera Sans', Verdana, Arial, sans-serif;
-    font-size: 14px;
-    line-height: 1.5;
-    color: #333;
-    background-color: #fff;
-}
-
-/* Reset any custom overrides */
-#header,
-#branding,
-#user-tools,
-.breadcrumbs,
-.content-main,
-.object-tools,
-#content {
-    all: unset;
-}
-
-/* Ensure default Django admin colors */
 #header {
     background: #0c4b33 !important;
     border-bottom: 1px solid #0c3d2f !important;
@@ -219,3 +201,5 @@ input[type="url"]:focus, textarea:focus, select:focus {
     outline: none !important;
     box-shadow: 0 0 0 2px rgba(121, 174, 200, 0.2) !important;
 }
+</style>
+{% endblock %}
