--- a/templates/tracker/register.html
+++ b/templates/tracker/register.html
@@ -272,6 +272,20 @@
                     </div>
                     
                     <div class="mb-3">
+                        <label for="{{ form.role.id_for_label }}" class="form-label">Role *</label>
+                        <div class="input-group">
+                            <span class="input-group-text">
+                                <i class="fas fa-user-tag"></i>
+                            </span>
+                            {{ form.role }}
+                        </div>
+                        {% if form.role.errors %}
+                            <div class="text-danger small mt-1">{{ form.role.errors }}</div>
+                        {% endif %}
+                        <div class="form-text">{{ form.role.help_text }}</div>
+                    </div>
+                    
+                    <div class="mb-3">
                         <label for="{{ form.password1.id_for_label }}" class="form-label">Password *</label>
                         {{ form.password1 }}
                         {% if form.password1.errors %}
@@ -300,7 +314,7 @@
                             </span>
                         </button>
                         
-                        <div class="text-center mt-3">
+                        <div class="text-center mt-2">
                             <small class="text-muted">
                                 Already have an account? 
                                 <a href="{% url 'login' %}" class="text-primary text-decoration-none">
@@ -314,6 +328,8 @@
                                 <a href="http://127.0.0.1:8000/admin/login/?next=/admin/" class="text-info text-decoration-none" target="_blank">
                                     <i class="fas fa-cog"></i> Admin Panel Access
                                 </a>
+                                <br>
+                                <small class="text-warning">Admin access requires Administrator role</small>
                             </small>
                         </div>
                     </div>
